<resources>
    <string name="app_name">看小说</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="about_app">说明：\n
        本项目为研究学习用途，不做任何更新完善保证，不会作为商业应用推广，禁止他人擅自应用于商业行为。\n
        应用内容均来自网络，如果您认为应用内容侵犯了您网站的权利请通过邮箱联系通知。\n
        欢迎前往github提交建议。\n
        邮箱：978622005@qq.com\n
        项目地址：https://github.com/lTBeL/fiction
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="chapterList">章节列表</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="to_top">置顶</string>
    <string name="novel_source_manager">书源管理</string>
    <string name="create_novel_source">新建书源</string>
    <string name="no_source_available">无可用书源</string>
    <string name="Search_content_cannot_be_empty">搜索内容不能为空</string>
    <string name="unknown_source">未知书源</string>
    <string name="search_error">搜索出错:%$1s</string>
    <string name="search_rule">搜索规则</string>
    <string name="website_address_e_g_https_github_com">网站地址(e.g:https://github.com/)</string>
    <string name="t_l_d_e_g_baidu_com">顶级域名(e.g:baidu.com)</string>
    <string name="novel_source_name">书源名称</string>
    <string name="novel_source">书源</string>
    <string name="utf_8">UTF-8</string>
    <string name="gbk">GBK</string>
    <string name="get">GET</string>
    <string name="post">POST</string>
    <string name="s_s_j_k_url_e_g_http_www_yunlaige_com_modules_article_search_php">搜索接口url(e.g:http://www.yunlaige.com/modules/article/search.php)</string>
    <string name="searchkey">searchKey</string>
    <string name="sjlb"><![CDATA[书籍列表(css:e.g:.chart-dashed-list > *)]]></string>
    <string name="sjm"><![CDATA[书籍名(css:e.g:> :nth-child(2) > :nth-child(1) > :nth-child(1) a[href])]]></string>
    <string name="sjmtq">书籍名提取(regex:e.g:(.*)/.*)</string>
    <string name="zhuozhe"><![CDATA[作者(css:e.g:> :nth-child(2) > :nth-child(2))]]></string>
    <string name="zzmtq">作者名提取(regex:e.g:(.*)/.*)</string>
    <string name="sjlj"><![CDATA[书籍链接(css:e.g:> :nth-child(2) > :nth-child(1) > :nth-child(1) a[href])]]></string>
    <string name="book_url">书籍链接提取，可不填(css:e.g:)</string>
    <string name="zhuozhe2"><![CDATA[作者(css:e.g:.info > :nth-child(2) > :nth-child(1)]]></string>
    <string name="shuming"><![CDATA[书名(css:e.g:.info > :nth-child(1) > :nth-child(1))]]></string>
    <string name="smtq">书名提取(regex:e.g:)</string>
    <string name="zzmtq2">作者名提取(regex:e.g:)</string>
</resources>
