<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="model"
            type="sjj.novel.view.module.source.EditNovelSourceViewModel.SearchResultViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/book_infos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sjlb"
                android:singleLine="true"
                android:text="@={model.bookInfos}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sjm"
                android:singleLine="true"
                android:text="@={model.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_regex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sjmtq"
                android:singleLine="true"
                android:text="@={model.nameRegex}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zhuozhe"
                android:singleLine="true"
                android:text="@={model.author}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/author_regex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zzmtq"
                android:singleLine="true"
                android:text="@={model.authorRegex}" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_chapter_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="最新章节URL(css:e.g:> :nth-child(2) > :nth-child(2))"
                android:singleLine="true"
                android:text="@={model.lastChapterUrl}" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_chapter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="最新章节名(css:e.g:> :nth-child(2) > :nth-child(2))"
                android:singleLine="true"
                android:text="@={model.lastChapter}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_chapter_regex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="最新章节名提取(regex:e.g:(.*)/.*)"
                android:singleLine="true"
                android:text="@={model.lastChapterRegex}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/book_cover_imgurl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="封面URL(css:e.g:> :nth-child(1) > :nth-child(1))"
                android:singleLine="true"
                android:text="@={model.bookCoverImgUrl}" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/book_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sjlj"
                android:singleLine="true"
                android:text="@={model.bookUrl}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="end"
            android:background="@drawable/btn_default"
            android:text="删除"
            android:textColor="@color/material_white" />
    </LinearLayout>
</layout>
