<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="sjj.novel.source.EditNovelSourceViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/novel_source" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/source_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/novel_source_name"
                        android:singleLine="true"
                        android:text="@={model.sourceName}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/top_level_domain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/t_l_d_e_g_baidu_com"
                        android:singleLine="true"
                        android:text="@={model.tld}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/base_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/website_address_e_g_https_github_com"
                        android:singleLine="true"
                        android:text="@={model.baseUrl}" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_rule" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/search_rule_method_get"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="@={model.isGet()}"
                        android:text="@string/get" />

                    <RadioButton
                        android:id="@+id/search_rule_method_post"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="@={!model.isGet()}"
                        android:text="@string/post" />


                    <RadioButton
                        android:id="@+id/search_rule_charset_utf8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="@={model.isUtf8()}"
                        android:text="@string/utf_8" />

                    <RadioButton
                        android:id="@+id/search_rule_charset_gbk"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="@={!model.isUtf8()}"
                        android:text="@string/gbk" />

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/server_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/s_s_j_k_url_e_g_http_www_yunlaige_com_modules_article_search_php"
                        android:singleLine="true"
                        android:text="@={model.serverUrl}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/search_Key"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="搜索key(e.g:searchKey)"
                        android:singleLine="true"
                        android:text="@={model.searchKey}" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="搜索结果解析规则" />

                    <TextView
                        android:id="@+id/add_search_result_rule"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="+" />
                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/search_rule_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="简介解析规则" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="简介区域(css:e.g:.book-info)"
                        android:singleLine="true"
                        android:text="@={model.info}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/book_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/book_url"
                        android:singleLine="true"
                        android:text="@={model.bookUrl}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/book_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/shuming"
                        android:singleLine="true"
                        android:text="@={model.bookName}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/book_name_regex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/smtq"
                        android:singleLine="true"
                        android:text="@={model.bookNameRegex}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/book_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/zhuozhe2"
                        android:singleLine="true"
                        android:text="@={model.bookAuthor}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/book_author_regex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/zzmtq2"
                        android:singleLine="true"
                        android:text="@={model.bookAuthorRegex}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/book_intro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="简介(css:e.g:.info > :nth-child(3))"
                        android:singleLine="true"
                        android:text="@={model.bookIntro}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/book_intro_regex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="简介提取(regex:e.g:)"
                        android:singleLine="true"
                        android:text="@={model.bookIntroRegex}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/book_cover_img_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="封面URL(css:e.g:> :nth-child(1) > :nth-child(1))"
                        android:singleLine="true"
                        android:text="@={model.bookCoverImgUrl}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/book_chapter_list_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="章节列表url可不填(css:e.g:.info > :nth-child(4) a[href])"
                        android:singleLine="true"
                        android:text="@={model.bookChapterListUrl}" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="章节列表解析规则" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/book_chapter_list_url_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="章节列表url可不填(css:e.g:)"
                        android:singleLine="true"
                        android:text="@={model.bookChapterListUrl2}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/book_chapter_list_scope"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="章节列表区域(css:e.g:#contenttable > :nth-child(1) a[href])"
                        android:singleLine="true"
                        android:text="@={model.bookChapterListScope}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/book_chapter_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="章节名(css:e.g:a)"
                        android:singleLine="true"
                        android:text="@={model.bookChapterName}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/book_chapter_name_regex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="章节名提取(regex:e.g:)"
                        android:singleLine="true"
                        android:text="@={model.bookChapterNameRegex}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/book_chapter_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="章节url(css:e.g:a)"
                        android:singleLine="true"
                        android:text="@={model.bookChapterUrl}" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="章节内容解析规则" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/book_chapter_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="章节内容(css:e.g:#content)"
                        android:singleLine="true"
                        android:text="@={model.bookChapterContent}" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>
</layout>
